syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.fontaipi.riianthai.proto";

message UserPreferences {
  bool use_dynamic_color = 1;
  bool use_dark_mode = 2;
}
